--- a/ui.frontend/src/main/webpack/components/_topnavbar.scss
+++ b/ui.frontend/src/main/webpack/components/_topnavbar.scss
@@ -1,7 +1,7 @@
 .top-nav {
     margin: 0;
     width: 100%;
-    background: #000;
+    background: transparent;
     border: 0.5px rgba(255, 255, 255, 0.6);
     border-style: solid none;
     height: 42px;
