--- a/ui.frontend/src/main/webpack/components/_navbar.scss
+++ b/ui.frontend/src/main/webpack/components/_navbar.scss
@@ -1,4 +1,11 @@
+@font-face {
+  font-family: "Gilroy-SemiBold";
+  src: url("fonts/Gilroy-SemiBold.ttf") format("truetype");
+}
+
+
 .container {
+  font-family: "Gilroy-SemiBold";
   width: 100%;
   position: relative;
   /* margin-left: auto; */
