--- a/ui.frontend/src/main/webpack/components/_headertitle.scss
+++ b/ui.frontend/src/main/webpack/components/_headertitle.scss
@@ -1,10 +1,4 @@
-@font-face {
-    font-family: "Displace Regular";
-    src: url("fonts/Displace20-Regular.ttf") format("truetype");
-}
-
 .content-wrapper {
-  font-family: "Displace Regular";
   z-index: 0;
   position: absolute;
   top: 30%;
@@ -12,7 +6,16 @@
   color: #fff;
 }
 
+.content-wrapper > h1 {
+  font-family: "Displace Regular";
+}
+
+.content-wrapper > p {
+  font-family: "Gilroy-SemiBold";
+}
+
 .content-wrapper > button {
+  font-family: "Gilroy-SemiBold";
   border-radius: 3.2rem;
   padding: 1rem 2.4rem;
   border: none;
